# RocketLogger

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  README.md  _config.yml  rocketlogger.code-workspace
.github/workflows/: publish-docs.yml  python-package.yml  rocketlogger-software.yml
code/: Readme.txt
code/ambient/: .gitignore  Makefile  main.c
code/ambient-test/: .cproject  .project  Makefile  linux-i2c-dev-interface.txt  main-standalone.c  main.c  main.h
code/debian/: .gitignore  flash_image.sh  setup_beaglebone.sh
code/device_tree_overlay/: Makefile  ROCKETLOGGER.dts
code/dto/: Makefile  README.md  ROCKETLOGGER-00A0-v1.1.dts  ROCKETLOGGER-00A0.dts  ROCKETLOGGER-v1.1.dts  ROCKETLOGGER.dts  capemgr  linux-dt-backports.h  setup_dto.sh
code/matlab/: average.m  average_points.m  bandPass.m  bandStop.m  calculate_accuracy.m  count_bits.m  decimateMean.m  freq_resp.m  generateCurrentPlot.m  get_intervals.m  lin_fit.m  plotPsd.m  prettyPlot.m  relativeErrorPlot.m  rl_aux_average_points.m  rl_aux_freq_resp.m  rl_aux_get_intervals.m  rl_aux_lin_fit.m  rl_aux_pareto_error.m  rl_aux_plot_psd.m  rl_aux_pretty_plot.m  rl_cal.m  rl_cal_read.m  rl_cal_write.m  rl_calibrate.m  rl_channel_on.m  rl_do_cal.m  rl_gen_dual_sweep_values.m  rl_get_rate.m  rl_merge_currents.m  rl_merge_currents_old.m  rl_pareto_error.m  rl_plot.m  rl_plot_merged.m  rl_plot_values.m  rl_read_bin.m  rl_read_csv.m  rl_types.m  rl_zero_cal.m  rld.m  (+1 more)
code/pcb/: deu_assembling_beta_altium.xlt  pcb_pool_rules_minimal.RUL
code/rocketlogger/: README.md  SPI.p  lib_util.h  meter.c  pru.c  pru.h  pwm.c  rl_deamon.c  rl_hw.h  rl_lib.c  rl_lib.h  rl_server.c  rl_util.c  sem.c  sem.h  types.h  web.c
code/simulations/: .gitignore  feedback_ammeter.TSC  input_filter.TSC  power_supply_filter.TSC  range_switching.TSC  simple_ammeter.tsc  super_simple_shuntmeter.TSC
code/src/: .project  Doxyfile  Makefile  README.md  SPI.p  SPI_v0.p  calibration.c  calibration.h  file_handling.c  file_handling.h  gpio.c  gpio.h  ipc.c  ipc.h  lib_util.c  lib_util.h  log.c  log.h  meter.c  meter.h  pru.c  pru.h  pwm.c  pwm.h  rl_deamon.c  rl_file.h  rl_hw.c  rl_hw.h  rl_lib.c  rl_lib.h  rl_low_level.c  rl_low_level.h  rl_server.c  rl_util.c  rl_util.h  rocketlogger.c  rocketlogger_offline.c  sem.c  sem.h  types.h  (+4 more)
code/test/: RL_PWM-00A0.dts  ROCKETLOGGER-00A0.dts  pwm.c
code/webserver/: lighttpd.conf  rl.html  rl.js  rl.php  setup_web.sh  webserver_setup.txt
hardware/: README.md
hardware/Case/: README.MD.txt  push_stick.SLDPRT  push_stick.STL  rocket_case_v1.SLDPRT  rocket_cover_acrylic_v1.SLDPRT
hardware/case/: README.md  assembly_of_case_and_boards.SLDASM  push_stick.SLDPRT  rocket_case_v1.SLDPRT  rocket_cover_acrylic_v1.SLDDRW
hardware/probes/: BOM.xlsx
hardware/simulations/: dual_channel.TSC  feedback_ammeter_diff.TSC  log_ammeter.tsc  log_ammeter_lt.TSC  low_noise_amplifier.TSC  power_vsw.TSC  pulseStretching.TSC  range_switching_lh.TSC  range_switching_rl.TSC  range_switching_rl_02.TSC  rocketlogger.tsc  shunt_diff_output.TSC  super_simple_ammeter.TSC  voltage_channel.TSC
python/v1.1/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  rocketlogger.html  rocketlogger.tests.html  search.html  searchindex.js
python/v1.1.4/: genindex.html  modules.html  objects.inv  rocketlogger.html  rocketlogger.tests.html  search.html  searchindex.js
python/v1.1.5/: index.html  objects.inv  py-modindex.html  rocketlogger.html  rocketlogger.tests.html  searchindex.js
python/v1.1.6/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  rocketlogger.html  rocketlogger.tests.html  search.html  searchindex.js
python/v2.0.0/: .buildinfo  calibration.html  data.html  genindex.html  index.html  objects.inv  py-modindex.html  rocketlogger.calibration.html  rocketlogger.data.html  rocketlogger.html  rocketlogger.tests.html  search.html  searchindex.js
python/v2.0.1/: .buildinfo  calibration.html  data.html  genindex.html  index.html  objects.inv  py-modindex.html  rocketlogger.calibration.html  rocketlogger.data.html  rocketlogger.html  search.html  searchindex.js  tests.html
python/v2.0.2/: .buildinfo  calibration.html  data.html  genindex.html  index.html  objects.inv  py-modindex.html  rocketlogger.calibration.html  rocketlogger.data.html  rocketlogger.html  search.html  searchindex.js  tests.html
python/v2.1.0/: .buildinfo  calibration.html  data.html  genindex.html  index.html  py-modindex.html  (+5 more)
script/: README.md
software/: .gitignore  Dockerfile  README.md  build_cross.sh  debian9_backport.patch  patch_image.sh
software/rocketlogger/: .clang-format  .clang-tidy  .cproject  .gitignore  .project  Dockerfile  Doxyfile  Makefile  README.md  SPI.p  ads131e0x.h  ambient.c  ambient.h  build_cross.sh  calibration.c  calibration.h  debian9_backport.patch  file_handling.c  file_handling.h  gpio.c  gpio.h  install.sh  lib_util.c  lib_util.h  log.c  log.h  meson.build  meter.c  meter.h  pru.c  pru.h  pwm.c  pwm.h  rl.c  rl.h  rl_deamon.c  rl_file.c  rl_file.h  rl_hw.c  rl_hw.h  (+24 more)
software/rocketlogger/config/: README.md  flocklab2.conf  rocketlogger.conf  rocketlogger.service  uEnv.txt.patch
software/rocketlogger/overlay/: BB-FLOCKLAB2.dts  README.md  ROCKETLOGGER.dts  install.sh
software/rocketlogger/pru/: check_config.c  rocketlogger.asm
software/rocketlogger/sensor/: bme280.c  bme280.h  sensor.c  sensor.h  tsl4531.c  tsl4531.h
software/rocketlogger/sensors/: bme280.c  bme280.h  sensor.c  sensor.h  sht31.h  tsl4531.c  tsl4531.h
software/rocketlogger/subprojects/: .gitignore  bb-overlays.wrap  libprussdrv.wrap
software/rocketlogger/subprojects/packagecache/: am335x_pru_package-1e9ff57815b84af028451d23e37482ced711c098.patch.tar.bz2  am335x_pru_package-master.patch.tar.bz2  bb-overlays.patch.tar.bz2  bb.org-overlays-28cb22447cefc9824e2c8288e59b36d46e4f5422.patch.tar.bz2  bb.org-overlays-master.patch.tar.bz2  libprussdrv.patch.tar.bz2
software/rocketlogger/tests/: .gitignore  README.md  requirements.txt  rocketlogger_cli.py  test_sample_process.py
(+4195 files in other folders)
